# Blender-3D-document-rendering-pipeline

./: .gitignore  LICENSE  README.md  demo_colab.ipynb  demo_windows.ipynb  download_blender_binary.sh  parameters.md  pyproject.toml
blender/: scene.blend  scene_no_dof_composited_albedo.blend
src/: blender_render_settings.py  camera_parameters.py  config.py  ground_parameters.py  hdri_parameters.py  light_parameters.py  main.py  paper_parameters.py  shadow_parameters.py
test_assets/: lorem ipsum.psd
